--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "url": "https://github.com/lukashlavacka/"
   },
   "scripts": {
-    "dev": "webpack-dev-server --inline --hot",
-    "build": "webpack -p"
+    "dev": "webpack-dev-server --lazy",
+    "build": "webpack -p",
+    "lint": "eslint src"
   },
   "dependencies": {
     "bootstrap": "^3.3.6",
@@ -55,6 +56,8 @@
     "babel-runtime": "^6.6.1",
     "css-loader": "^0.23.1",
     "eslint": "^2.2.0",
+    "eslint-plugin-react": "^4.1.0",
+    "estraverse-fb": "^1.3.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14"
   }
