--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "url": "https://github.com/lukashlavacka/"
   },
   "scripts": {
-    "dev": "webpack-dev-server --lazy",
+    "dev-build": "webpack --config webpack.dev.config.js",
+    "dev": "webpack-dev-server --inline --open --config webpack.dev.config.js",
     "build": "webpack -p",
     "lint": "eslint src"
   },
@@ -58,6 +59,7 @@
     "eslint": "^2.2.0",
     "eslint-plugin-react": "^4.1.0",
     "estraverse-fb": "^1.3.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14"
   }
