--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "dev-build": "webpack --config webpack.dev.config.js",
-    "dev": "webpack-dev-server --inline --open --config webpack.dev.config.js",
+    "dev": "webpack-dev-server --hot --inline --open --config webpack.dev.config.js",
     "build": "webpack -p",
     "lint": "eslint src"
   },
@@ -39,6 +39,7 @@
     "react-datepicker": "^0.23.2",
     "react-dom": "^0.14.7",
     "react-draggable": "^1.3.3",
+    "react-google-maps": "^4.9.1",
     "react-grid-layout": "^0.10.8",
     "react-slider": "^0.6.1",
     "sql.js": "^0.3.0",
