--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dev-build": "webpack --config webpack.dev.config.js",
     "dev": "webpack-dev-server --hot --inline --open --config webpack.dev.config.js",
     "build": "webpack -p",
-    "lint": "eslint src"
+    "lint": "eslint --ext .js --ext .jsx src"
   },
   "dependencies": {
     "bootstrap": "^3.3.6",
@@ -57,8 +57,8 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.6.1",
     "css-loader": "^0.23.1",
-    "eslint": "^2.2.0",
-    "eslint-plugin-react": "^4.1.0",
+    "eslint": "^2.3.0",
+    "eslint-plugin-react": "^4.2.1",
     "estraverse-fb": "^1.3.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "style-loader": "^0.13.0",
