--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.6.4",
-    "babel-eslint": "^6.0.0-beta.1",
+    "babel-eslint": "^6.0.0-beta.5",
     "babel-jest": "^6.0.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
@@ -58,6 +58,8 @@
     "babel-runtime": "^6.6.1",
     "css-loader": "^0.23.1",
     "eslint": "^2.3.0",
+    "eslint-config-airbnb": "^6.1.0",
+    "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.2.1",
     "estraverse-fb": "^1.3.1",
     "extract-text-webpack-plugin": "^1.0.1",
