--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nprogress": "^0.2.0",
     "q": "^1.4.1",
     "react": "^0.14.7",
+    "react-addons-pure-render-mixin": "^0.14.7",
     "react-addons-update": "^0.14.7",
     "react-chartjs": "^0.7.3",
     "react-checkbox-group": "^0.3.1",
@@ -63,6 +64,7 @@
     "eslint-plugin-react": "^4.2.1",
     "estraverse-fb": "^1.3.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14"
   }
