--- a/package.json
+++ b/package.json
@@ -20,52 +20,52 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.6",
-    "chart.js": "^1.0.2",
+    "chart.js": "^1.1.0",
     "exports-loader": "^0.6.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "fs": "0.0.2",
     "imports-loader": "^0.6.5",
-    "less": "^2.6.0",
-    "less-loader": "^2.2.2",
-    "lodash": "^4.6.1",
-    "moment": "^2.11.2",
+    "less": "^2.6.1",
+    "less-loader": "^2.2.3",
+    "lodash": "^4.8.2",
+    "moment": "^2.12.0",
     "nprogress": "^0.2.0",
-    "q": "^1.4.1",
-    "react": "^0.14.7",
-    "react-addons-pure-render-mixin": "^0.14.7",
-    "react-addons-update": "^0.14.7",
+    "q": "^2.0.3",
+    "react": "^0.14.8",
+    "react-addons-pure-render-mixin": "^0.14.8",
+    "react-addons-update": "^0.14.8",
     "react-chartjs": "^0.7.3",
-    "react-checkbox-group": "^0.3.1",
-    "react-datepicker": "^0.23.2",
-    "react-dom": "^0.14.7",
-    "react-draggable": "^1.3.3",
+    "react-checkbox-group": "^1.0.1",
+    "react-datepicker": "^0.25.0",
+    "react-dom": "^0.14.8",
+    "react-draggable": "^1.3.4",
     "react-google-maps": "^4.9.1",
-    "react-grid-layout": "^0.10.8",
+    "react-grid-layout": "^0.11.1",
     "react-slider": "^0.6.1",
-    "sql.js": "^0.3.0",
-    "squel": "^4.3.3",
+    "sql.js": "^0.3.2",
+    "squel": "^5.0.0",
     "url-loader": "^0.5.7"
   },
   "devDependencies": {
     "babel": "^6.5.2",
-    "babel-core": "^6.6.4",
-    "babel-eslint": "^6.0.0-beta.5",
-    "babel-jest": "^6.0.1",
+    "babel-core": "^6.7.4",
+    "babel-eslint": "^6.0.2",
+    "babel-jest": "^10.0.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.6.1",
     "css-loader": "^0.23.1",
-    "eslint": "^2.3.0",
-    "eslint-config-airbnb": "^6.1.0",
+    "eslint": "^2.7.0",
+    "eslint-config-airbnb": "^6.2.0",
     "eslint-loader": "^1.3.0",
-    "eslint-plugin-react": "^4.2.1",
+    "eslint-plugin-react": "^4.2.3",
     "estraverse-fb": "^1.3.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "*",
     "react-hot-loader": "^1.3.0",
-    "style-loader": "^0.13.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.12.14"
   }
 }
