--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.6",
-    "chart.js": "^1.1.0",
+    "chart.js": "^1.1.1",
+    "eslint-plugin-react": "^4.3.0",
     "exports-loader": "^0.6.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
@@ -32,19 +33,19 @@
     "moment": "^2.12.0",
     "nprogress": "^0.2.0",
     "q": "^2.0.3",
-    "react": "^0.14.8",
+    "react": "^15.0.0",
     "react-addons-pure-render-mixin": "^0.14.8",
     "react-addons-update": "^0.14.8",
     "react-chartjs": "^0.7.3",
     "react-checkbox-group": "^1.0.1",
     "react-datepicker": "^0.25.0",
-    "react-dom": "^0.14.8",
+    "react-dom": "^15.0.0",
     "react-draggable": "^1.3.4",
     "react-google-maps": "^4.9.1",
-    "react-grid-layout": "^0.11.1",
+    "react-grid-layout": "^0.11.2",
     "react-slider": "^0.6.1",
     "sql.js": "^0.3.2",
-    "squel": "^5.0.0",
+    "squel": "^5.0.1",
     "url-loader": "^0.5.7"
   },
   "devDependencies": {
