--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "lint": "eslint --ext .js --ext .jsx src"
   },
   "dependencies": {
+    "babel-core": "^6.7.7",
+    "babel-eslint": "^6.0.4",
+    "babel-jest": "^10.0.2",
     "bootstrap": "^3.3.6",
     "chart.js": "^1.1.1",
+    "eslint": "^2.9.0",
     "eslint-plugin-react": "^4.3.0",
     "exports-loader": "^0.6.3",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -29,24 +33,25 @@
     "imports-loader": "^0.6.5",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
-    "lodash": "^4.8.2",
-    "moment": "^2.12.0",
+    "lodash": "^4.11.1",
+    "moment": "^2.13.0",
     "nprogress": "^0.2.0",
     "q": "^2.0.3",
-    "react": "^15.0.0",
+    "react": "^15.0.2",
     "react-addons-pure-render-mixin": "^0.14.8",
     "react-addons-update": "^0.14.8",
     "react-chartjs": "^0.7.3",
-    "react-checkbox-group": "^1.0.1",
+    "react-checkbox-group": "^1.0.4",
     "react-datepicker": "^0.25.0",
-    "react-dom": "^15.0.0",
-    "react-draggable": "^1.3.4",
-    "react-google-maps": "^4.9.1",
-    "react-grid-layout": "^0.11.2",
+    "react-dom": "^15.0.2",
+    "react-draggable": "^1.3.7",
+    "react-google-maps": "^4.10.1",
+    "react-grid-layout": "^0.11.3",
     "react-slider": "^0.6.1",
     "sql.js": "^0.3.2",
-    "squel": "^5.0.1",
-    "url-loader": "^0.5.7"
+    "squel": "^5.0.4",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
