--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,30 +1,3 @@
 {
-    "extends": "airbnb",
-    "parser": "babel-eslint",
-    "rules": {
-        "indent": [
-            2,
-            4,
-            {
-                "SwitchCase": 1,
-                "VariableDeclarator": 1
-            }
-        ],
-        "react/react-in-jsx-scope": 0,
-        "react/no-danger": 2,
-        "react/jsx-indent-props": [
-            2,
-            4
-        ],
-        "react/no-multi-comp": [
-            0
-        ],
-        "react/jsx-no-bind": [
-            2,
-            {
-                "ignoreRefs": true
-            }
-        ],
-        "react/no-direct-mutation-state": 2
-    }
+  "extends": "react-app"
 }
