--- a/package.json
+++ b/package.json
@@ -1,77 +1,33 @@
 {
-  "name": "ReactJs-LightroomCatalog-Viewer",
+  "name": "reactjs-lightroom_catalog-viewer",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.1",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/lukashlavacka/ReactJS-LightroomCatalog-Viewer.git"
-  },
-  "homepage": "https://github.com/lukashlavacka/ReactJS-LightroomCatalog-Viewer",
-  "author": {
-    "name": "Lukas Hlavacka",
-    "email": "lukas.hlavacka@gmail.com",
-    "url": "https://github.com/lukashlavacka/"
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "chart.js": "^2.6.0",
+    "moment": "^2.18.1",
+    "nprogress": "^0.2.0",
+    "prop-types": "^15.5.10",
+    "q": "^1.5.0",
+    "react": "^15.6.1",
+    "react-addons-pure-render-mixin": "^15.6.0",
+    "react-addons-update": "^15.6.0",
+    "react-chartjs-2": "^2.1.0",
+    "react-checkbox-group": "^3.1.1",
+    "react-datepicker": "^0.48.0",
+    "react-dom": "^15.6.1",
+    "react-draggable": "^2.2.6",
+    "react-google-maps": "^7.1.0",
+    "react-grid-layout": "^0.14.6",
+    "react-scripts": "1.0.10",
+    "react-slider": "^0.8.0",
+    "sql.js": "^0.4.0",
+    "squel": "^5.10.0"
   },
   "scripts": {
-    "dev-build": "webpack --config webpack.dev.config.js",
-    "dev": "webpack-dev-server --hot --inline --open --config webpack.dev.config.js",
-    "build": "webpack -p",
-    "lint": "eslint --ext .js --ext .jsx src"
-  },
-  "dependencies": {
-    "babel-core": "^6.7.7",
-    "babel-eslint": "^6.0.4",
-    "babel-jest": "^10.0.2",
-    "bootstrap": "^3.3.6",
-    "chart.js": "^1.1.1",
-    "eslint": "^2.9.0",
-    "eslint-plugin-react": "^4.3.0",
-    "exports-loader": "^0.6.3",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "fs": "0.0.2",
-    "imports-loader": "^0.6.5",
-    "less": "^2.6.1",
-    "less-loader": "^2.2.3",
-    "lodash": "^4.11.1",
-    "moment": "^2.13.0",
-    "nprogress": "^0.2.0",
-    "q": "^2.0.3",
-    "react": "^15.0.2",
-    "react-addons-pure-render-mixin": "^0.14.8",
-    "react-addons-update": "^0.14.8",
-    "react-chartjs": "^0.7.3",
-    "react-checkbox-group": "^1.0.4",
-    "react-datepicker": "^0.27.0",
-    "react-dom": "^15.0.2",
-    "react-draggable": "^1.3.7",
-    "react-google-maps": "^4.10.1",
-    "react-grid-layout": "^0.11.3",
-    "react-slider": "^0.6.1",
-    "sql.js": "^0.3.2",
-    "squel": "^5.0.4",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.0"
-  },
-  "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-core": "^6.7.4",
-    "babel-eslint": "^6.0.2",
-    "babel-jest": "^10.0.1",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-runtime": "^6.6.1",
-    "css-loader": "^0.23.1",
-    "eslint": "^2.7.0",
-    "eslint-config-airbnb": "^6.2.0",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-react": "^4.2.3",
-    "estraverse-fb": "^1.3.1",
-    "extract-text-webpack-plugin": "*",
-    "react-hot-loader": "^1.3.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.12.14"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
