Added deploy and analyze scripts to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reactjs-lightroom_catalog-viewer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lukashlavacka.github.io/ReactJS-LightroomCatalog-Viewer",
   "dependencies": {
     "bootstrap": "^3.3.7",
     "chart.js": "^2.6.0",
@@ -28,6 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "analyze": "source-map-explorer build/static/js/main.*",
   }
 }
