--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "chart.js": "^2.6.0",
+    "immutability-helper": "^2.2.3",
     "moment": "^2.18.1",
     "nprogress": "^0.2.0",
     "prop-types": "^15.5.10",
     "q": "^1.5.0",
     "react": "^15.6.1",
-    "react-addons-pure-render-mixin": "^15.6.0",
-    "react-addons-update": "^15.6.0",
     "react-chartjs-2": "^2.1.0",
     "react-checkbox-group": "^3.1.1",
     "react-datepicker": "^0.48.0",
