--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:local": "set PUBLIC_URL=.&& react-scripts build && rm -r build-local && cp -r build build-local",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
