Updating build versions

--- a/package.json
+++ b/package.json
@@ -1,42 +1,42 @@
 {
-  "name": "reactjs-lightroom_catalog-viewer",
-  "version": "0.2.0",
-  "private": true,
-  "homepage": "https://lukashlavacka.github.io/ReactJS-LightroomCatalog-Viewer",
-  "dependencies": {
-    "bootstrap": "^4.0.0-alpha.6",
-    "chart.js": "^2.6.0",
-    "font-awesome": "^4.7.0",
-    "immutability-helper": "^2.2.3",
-    "moment": "^2.18.1",
-    "nprogress": "^0.2.0",
-    "prop-types": "^15.5.10",
-    "q": "^1.5.0",
-    "react": "^15.6.1",
-    "react-chartjs-2": "^2.1.0",
-    "react-checkbox-group": "^3.1.1",
-    "react-datepicker": "^0.48.0",
-    "react-dom": "^15.6.1",
-    "react-draggable": "^2.2.6",
-    "react-google-maps": "^7.1.0",
-    "react-grid-layout": "^0.14.6",
-    "react-scripts": "1.0.10",
-    "react-slider": "^0.8.0",
-    "squel": "^5.10.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "build:file": "set PUBLIC_URL=.&& set REACT_APP_FILE=1 && set REACT_APP_SQL=sql&& react-scripts build && rm -fr build-file && cp -r build build-file",
-    "build:local": "set PUBLIC_URL=.&& react-scripts build && rm -fr build-local && cp -r build build-local",
-    "build:chrome": "set PUBLIC_URL=.&& set REACT_APP_CHROME=1&& react-scripts build && rm -fr build-chrome && cp -r build build-chrome",
-    "build-all": "npm run build:file && npm run build:local && npm run build:chrome && npm run build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "analyze": "source-map-explorer build/static/js/main.*",
-    "preserve": "npm run build:local",
-    "serve": "serve -s build-local"
-  }
+    "name": "reactjs-lightroom_catalog-viewer",
+    "version": "0.2.0",
+    "private": true,
+    "homepage": "https://lukashlavacka.github.io/ReactJS-LightroomCatalog-Viewer",
+    "dependencies": {
+        "bootstrap": "^4.0.0-alpha.6",
+        "chart.js": "^2.6.0",
+        "font-awesome": "^4.7.0",
+        "immutability-helper": "^2.2.3",
+        "moment": "^2.18.1",
+        "nprogress": "^0.2.0",
+        "prop-types": "^15.5.10",
+        "q": "^1.5.0",
+        "react": "^15.6.1",
+        "react-chartjs-2": "^2.1.0",
+        "react-checkbox-group": "^3.1.1",
+        "react-datepicker": "^0.48.0",
+        "react-dom": "^15.6.1",
+        "react-draggable": "^2.2.6",
+        "react-google-maps": "^7.1.0",
+        "react-grid-layout": "^0.14.6",
+        "react-scripts": "1.0.10",
+        "react-slider": "^0.8.0",
+        "squel": "^5.10.0"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "build:file": "set PUBLIC_URL=.&& set REACT_APP_FILE=1 && set REACT_APP_SQL=sql&& react-scripts build && rm -fr build-file && mv build build-file",
+        "build:local": "set PUBLIC_URL=.&& react-scripts build && rm -fr build-local && mv build build-local",
+        "build:chrome": "set PUBLIC_URL=.&& set REACT_APP_CHROME=1&& react-scripts build && rm -fr build-chrome && mv build build-chrome",
+        "build:all": "npm run build:file && npm run build:local && npm run build:chrome && npm run build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
+        "analyze": "source-map-explorer build/static/js/main.*",
+        "preserve": "npm run build:local",
+        "serve": "serve -s build-local"
+    }
 }
