--- a/package.json
+++ b/package.json
@@ -1,44 +1,44 @@
 {
-    "name": "reactjs-lightroom_catalog-viewer",
-    "version": "0.2.0",
-    "private": true,
-    "homepage": "https://lukashlavacka.github.io/ReactJS-LightroomCatalog-Viewer",
-    "dependencies": {
-        "bootstrap": "^4.0.0-alpha.6",
-        "chart.js": "^2.6.0",
-        "font-awesome": "^4.7.0",
-        "immutability-helper": "^2.3.0",
-        "moment": "^2.18.1",
-        "nprogress": "^0.2.0",
-        "prop-types": "^15.5.10",
-        "react": "^15.6.1",
-        "react-chartjs-2": "^2.5.3",
-        "react-checkbox-group": "^3.1.1",
-        "react-datepicker": "^0.52.0",
-        "react-dom": "^15.6.1",
-        "react-draggable": "^2.2.6",
-        "react-google-maps": "^7.2.0",
-        "react-grid-layout": "^0.14.7",
-        "react-scripts": "1.0.10",
-        "react-slider": "^0.8.0",
-        "squel": "^5.11.1"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "build:file": "set PUBLIC_URL=.&& set REACT_APP_FILE=1 && set REACT_APP_SQL=sql&& react-scripts build && rm -fr build-file && mv build build-file",
-        "build:local": "set PUBLIC_URL=.&& react-scripts build && rm -fr build-local && mv build build-local",
-        "build:chrome": "set PUBLIC_URL=.&& set REACT_APP_CHROME=1&& react-scripts build && rm -fr build-chrome && mv build build-chrome",
-        "build:all": "npm run build:file && npm run build:local && npm run build:chrome && npm run build",
-        "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build",
-        "analyze": "source-map-explorer build/static/js/main.*",
-        "preserve": "npm run build:local",
-        "serve": "serve -s build-local",
-        "predeploy:file": "npm run build:file",
-        "deploy:file": "gh-pages -d build-file -b static -s {lib/sql.js,static/**/*.js,static/**/*.css,static/media/*.*,favicon.ico,index.html}"
-    },
-    "devDependencies": {}
+  "name": "reactjs-lightroom_catalog-viewer",
+  "version": "0.2.0",
+  "private": true,
+  "homepage": "https://lukashlavacka.github.io/ReactJS-LightroomCatalog-Viewer",
+  "dependencies": {
+    "bootstrap": "^4.0.0-beta",
+    "chart.js": "^2.7.0",
+    "create-react-class": "^15.6.2",
+    "font-awesome": "^4.7.0",
+    "immutability-helper": "^2.4.0",
+    "moment": "^2.18.1",
+    "nprogress": "^0.2.0",
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
+    "react-chartjs-2": "^2.6.2",
+    "react-checkbox-group": "^3.3.1",
+    "react-datepicker": "^0.55.0",
+    "react-dom": "^16.0.0",
+    "react-draggable": "^3.0.3",
+    "react-google-maps": "^8.3.0",
+    "react-grid-layout": "^0.15.3",
+    "react-scripts": "^1.0.14",
+    "react-slider": "^0.9.0",
+    "squel": "^5.12.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "build:file": "set PUBLIC_URL=.&& set REACT_APP_FILE=1 && set REACT_APP_SQL=sql&& react-scripts build && rm -fr build-file && mv build build-file",
+    "build:local": "set PUBLIC_URL=.&& react-scripts build && rm -fr build-local && mv build build-local",
+    "build:chrome": "set PUBLIC_URL=.&& set REACT_APP_CHROME=1&& react-scripts build && rm -fr build-chrome && mv build build-chrome",
+    "build:all": "npm run build:file && npm run build:local && npm run build:chrome && npm run build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "analyze": "source-map-explorer build/static/js/main.*",
+    "preserve": "npm run build:local",
+    "serve": "serve -s build-local",
+    "predeploy:file": "npm run build:file",
+    "deploy:file": "gh-pages -d build-file -b static -s {lib/sql.js,static/**/*.js,static/**/*.css,static/media/*.*,favicon.ico,index.html}"
+  }
 }
