--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "react-datepicker": "^0.55.0",
     "react-dom": "^16.0.0",
     "react-draggable": "^3.0.3",
-    "react-google-maps": "^8.3.0",
+    "react-google-maps": "^8.3.1",
     "react-grid-layout": "^0.15.3",
     "react-scripts": "^1.0.14",
-    "react-slider": "^0.9.0",
+    "react-slider": "github:lukashlavacka/react-slider",
     "squel": "^5.12.0"
   },
   "scripts": {
