--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,15 @@
   "editor.formatOnSave": true,
   "editor.tabSize": 2,
   "prettier.parser": "flow",
-  "typescript.validate.enable": false
+  "typescript.validate.enable": false,
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/node_modules": true,
+    "**/build*": true,
+    "**/.vscode/chrome": true
+  }
 }
